Cherry-pick fe792fdab477. rdar://problem/113459152

Crash under ProcessThrottlerActivity::isValid()
    https://bugs.webkit.org/show_bug.cgi?id=259886
    rdar://113459152

    Reviewed by Brent Fulgham.

    ProcessThrottlerTimedActivity::activityTimedOut() was getting called, it
    would set `m_activity` to nullptr, which would destroy the
    ProcessThrottlerActivity. Because this was the last activity, it would
    cause the prepareToSuspend logic to get called, which could cause
    `m_activity` to get queried while in the middle of the assignment, causing
    a crash.

    To address the issue, I now use std::variant::swap() in activityTimedOut()
    so that m_activity is in a good state (nullptr) when the
    ProcessThrottlerActivity gets destroyed.

    * Source/WebKit/UIProcess/ProcessThrottler.cpp:
    (WebKit::ProcessThrottlerTimedActivity::activityTimedOut):

    Canonical link: https://commits.webkit.org/266642@main

Identifier: 265870.314@safari-7616.1.27.11-branch